almost almost done

--- a/playlists.html
+++ b/playlists.html
@@ -9,10 +9,10 @@
 <body>
 
   <!-- TOP NAV -->
-  <div class="top-nav">
-    <button class="nav-button" onclick="location.href='index.html'">&larr; Home</button>
-    <button class="nav-button" onclick="location.href='upload.html'">Upload Songs</button>
-  </div>
+ <div class="top-nav">
+    <button class="nav-button" onclick="window.location.href='/'">&larr; Home</button>
+    <button class="nav-button" onclick="window.location.href='/upload.html'">Upload Songs</button>  <!-- CHANGED -->
+</div>
 
   <header>
     <h1>Your Playlists</h1>
