--- a/upload.html
+++ b/upload.html
@@ -9,19 +9,17 @@
 <body>
 
   <!-- TOP NAV -->
-  <div class="top-nav">
-
-    <div class="nav-left">
-      <button class="nav-button" onclick="location.href='index.html'">
+  <<div class="nav-left">
+    <button class="nav-button" onclick="window.location.href='/'">
         &larr; Back to Home
-      </button>
-    </div>
+    </button>
+</div>
 
-    <div class="nav-right">
-      <button class="nav-button" onclick="location.href='playlists.html'">
+<div class="nav-right">
+    <button class="nav-button" onclick="window.location.href='/playlists.html'">
         Go to Playlists &rarr;
-      </button>
-    </div>
+    </button>
+</div>
 
   </div>
 
