--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 </section>
 
 <div class="bottom-nav">
-    <a href="index.html"><button class="active">Home</button></a>
-    <a href="upload.html"><button>Upload Songs</button></a>
-    <a href="playlists.html"><button>Playlists</button></a>
+    <a href="/"><button class="active">Home</button></a>
+    <a href="/upload.html"><button>Upload Songs</button></a>  <!-- CHANGED -->
+    <a href="/playlists.html"><button>Playlists</button></a>
 </div>
 
 </body>
