--- a/playlists.html
+++ b/playlists.html
@@ -5,6 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Playlists</title>
   <link rel="stylesheet" href="style.css">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Playlists</title>
+  <link rel="stylesheet" href="style.css">
+  
+  <!-- PWA Tags -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#00fff7">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Music Library">
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+  <meta name="msapplication-TileColor" content="#00fff7">
+  <meta name="msapplication-TileImage" content="/icons/icon-144x144.png">
 </head>
 <body>
 
