--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
 </section>
 
 <div class="bottom-nav">
-    <a href="/"><button class="active">🏠 Home</button></a>
-    <a href="/upload"><button>📤 Upload</button></a>  
-    <a href="/playlists"><button>📋 Playlists</button></a>
-    <a href="/top-songs"><button>⭐ Top 50</button></a>
+    <a href="index.html"><button class="active">🏠 Home</button></a>
+    <a href="upload.html"><button>📤 Upload</button></a>  
+    <a href="playlists.html"><button>📋 Playlists</button></a>
+    <a href="top-songs.html"><button>⭐ Top 50</button></a>
 </div>
 
 <script>
