--- a/playlists.html
+++ b/playlists.html
@@ -23,13 +23,12 @@
 </head>
 <body>
 
-  <!-- TOP NAV -->
- <!-- In the TOP NAV section of playlists.html -->
+  
 <div class="top-nav">
-    <button class="nav-button" onclick="window.location.href='/'">&larr; Home</button>
-    <button class="nav-button" onclick="window.location.href='/upload'">Upload Songs</button>
+    <button class="nav-button" onclick="window.location.href='index.html'">&larr; Home</button>
+    <button class="nav-button" onclick="window.location.href='upload.html'">Upload Songs</button>
     <!-- ADD THIS BUTTON -->
-    <button class="nav-button" onclick="window.location.href='/top-songs'" style="background: linear-gradient(145deg, #ffd700, #ffaa00); color: black;">
+    <button class="nav-button" onclick="window.location.href='/top-songs.html'" style="background: linear-gradient(145deg, #ffd700, #ffaa00); color: black;">
         ⭐ Top 50 Songs
     </button>
 </div>
