--- a/top-songs.html
+++ b/top-songs.html
@@ -146,14 +146,14 @@
 
 <!-- TOP NAV -->
 <div class="top-nav">
-    <button class="nav-button" onclick="window.location.href='/'">
+    <button class="nav-button" onclick="window.location.href='index.html'">
         &larr; Home
     </button>
     <div class="nav-right">
-        <button class="nav-button" onclick="window.location.href='/upload'">
+        <button class="nav-button" onclick="window.location.href='upload.html'">
             Upload Songs
         </button>
-        <button class="nav-button" onclick="window.location.href='/playlists'">
+        <button class="nav-button" onclick="window.location.href='playlists.html'">
             Playlists
         </button>
     </div>
