--- a/upload.html
+++ b/upload.html
@@ -19,17 +19,17 @@
 
 <div class="top-nav">
     <div class="nav-left">
-        <button class="nav-button" onclick="window.location.href='/'">
+        <button class="nav-button" onclick="window.location.href='index.html'">
             &larr; Back to Home
         </button>
     </div>
 
     <div class="nav-right">
-        <button class="nav-button" onclick="window.location.href='/top-songs'" 
+        <button class="nav-button" onclick="window.location.href='top-songs.html'" 
                 style="background: linear-gradient(145deg, #ffd700, #ffaa00); color: black; margin-right: 10px;">
             ⭐ Top 50 Songs
         </button>
-        <button class="nav-button" onclick="window.location.href='/playlists'">
+        <button class="nav-button" onclick="window.location.href='playlists.html'">
             Go to Playlists &rarr;
         </button>
     </div>
