--- a/playlists.html
+++ b/playlists.html
@@ -28,7 +28,7 @@
     <button class="nav-button" onclick="window.location.href='index.html'">&larr; Home</button>
     <button class="nav-button" onclick="window.location.href='upload.html'">Upload Songs</button>
     <!-- ADD THIS BUTTON -->
-    <button class="nav-button" onclick="window.location.href='/top-songs.html'" style="background: linear-gradient(145deg, #ffd700, #ffaa00); color: black;">
+    <button class="nav-button" onclick="window.location.href='top-songs.html'" style="background: linear-gradient(145deg, #ffd700, #ffaa00); color: black;">
         ⭐ Top 50 Songs
     </button>
 </div>
@@ -590,4 +590,3 @@
 
 </body>
 </html>
-
