--- a/upload.html
+++ b/upload.html
@@ -29,7 +29,7 @@
                 style="background: linear-gradient(145deg, #ffd700, #ffaa00); color: black; margin-right: 10px;">
             ⭐ Top 50 Songs
         </button>
-        <button class="nav-button" onclick="window.location.href='playlists.html'">
+        <button class="nav-button" onclick="window.location.href='playlist.html'">
             Go to Playlists &rarr;
         </button>
     </div>
